tests/query_errors/bad_into/error.txt
Error: 
    1 | select event from in into not_out;
      |                           ^^^^^^^ Stream used in `from` or `into` is not defined: not_out